--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('foto background1.webp'); /* Ganti dengan gambar latar yang sesuai */
+    background-image: url('bg.jpg'); /* Ganti dengan gambar latar yang sesuai */
     background-size: cover;
     color: white;
 }
